[gd_scene load_steps=26 format=3 uid="uid://dp73uj50ca6ch"]

[ext_resource type="Script" uid="uid://b71lefo8ecrmh" path="res://sub_viewport.gd" id="1_81vs3"]
[ext_resource type="PackedScene" uid="uid://cek4xwlnld8ny" path="res://player.tscn" id="2_t4le4"]
[ext_resource type="Texture2D" uid="uid://cg14x5er1ayda" path="res://wood.png" id="3_g6di7"]
[ext_resource type="Script" uid="uid://cpghwsv5cuind" path="res://cam_point.gd" id="4_w7je5"]
[ext_resource type="Shader" uid="uid://ch7fewxklubsl" path="res://debug.gdshader" id="5_50yrh"]
[ext_resource type="Script" uid="uid://tmg63aoclq8p" path="res://texture_rect.gd" id="6_nyjhf"]
[ext_resource type="PackedScene" uid="uid://bobo5u3bmx73q" path="res://dialogue_box.tscn" id="7_eb6kk"]
[ext_resource type="Script" uid="uid://bhdfm3iv3wd1a" path="res://control_tactil.gd" id="8_jmq0y"]
[ext_resource type="Script" uid="uid://donng8h7chb0b" path="res://barman.gd" id="9_btlhs"]
[ext_resource type="Script" uid="uid://cmc3awse4o6g" path="res://cam_ctrl.gd" id="10_771cr"]
[ext_resource type="AudioStream" uid="uid://ccfl1moc5g3ho" path="res://musique/3.wav" id="11_qct44"]
[ext_resource type="Script" uid="uid://ci4oisbpnk0y2" path="res://scene_switcher.gd" id="12_3lyvf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rdi1l"]
albedo_color = Color(0.793056, 0.575061, 4.62055e-06, 1)
albedo_texture = ExtResource("3_g6di7")
uv1_scale = Vector3(0.1, 0.1, 0.1)
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lvjdj"]
albedo_texture = ExtResource("3_g6di7")
albedo_texture_force_srgb = true
uv1_scale = Vector3(0.3, 0.1, 0.5)
texture_filter = 0
texture_repeat = false

[sub_resource type="BoxShape3D" id="BoxShape3D_1uwqr"]
size = Vector3(3.30371, 4, 3.73499)

[sub_resource type="BoxMesh" id="BoxMesh_lvjdj"]
size = Vector3(4, 4, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_txpwr"]
albedo_texture = ExtResource("3_g6di7")
uv1_scale = Vector3(0.02, 0.02, 0.02)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_obyai"]
albedo_texture = ExtResource("3_g6di7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e0a3d"]
shader = ExtResource("5_50yrh")
shader_parameter/pixel_size = Vector2(3, 3)
shader_parameter/aberration_amount = 0.008
shader_parameter/bulge_strength = 0.2
shader_parameter/scanline_intensity = 0.2
shader_parameter/scanline_size = 4.0
shader_parameter/pixel_lfo_amount = 0.0
shader_parameter/aberration_lfo_amount = 0.0
shader_parameter/bulge_lfo_amount = 0.0
shader_parameter/scanline_lfo_amount = 0.0
shader_parameter/pixel_lfo_speed = 0.25
shader_parameter/aberration_lfo_speed = 0.25
shader_parameter/bulge_lfo_speed = 0.25
shader_parameter/scanline_lfo_speed = 0.25

[sub_resource type="ViewportTexture" id="ViewportTexture_txpwr"]
viewport_path = NodePath("SubViewport")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_obyai"]

[sub_resource type="Curve" id="Curve_jwave"]
_data = [Vector2(0, 0.0053134), 0.0, 0.237704, 0, 0, Vector2(0.910426, 1), 2.11682, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_pk40j"]
_data = [Vector2(0, 0.00876725), 0.0, 1.30473, 0, 0, Vector2(0.820852, 1), 0.0904623, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_6xqm2"]
_data = [Vector2(0.35536, 0), 0.0, 0.0, 0, 0, Vector2(0.772394, 0.792774), 4.55704, 3.9514, 0, 0, Vector2(0.922173, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_6xqm2"]
plane = Plane(0, 0, -1, 0)

[node name="Debug2" type="Node3D"]

[node name="SubViewport" type="SubViewport" parent="."]
canvas_item_default_texture_filter = 0
script = ExtResource("1_81vs3")

[node name="Player" parent="SubViewport" instance=ExtResource("2_t4le4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.26502, 0)
tactil_ctrl = true

[node name="CSGBox3D" type="CSGBox3D" parent="SubViewport"]
transform = Transform3D(15.3222, 0, 0, 0, 1, 0, 0, 0, 10.787, -13.3891, 0, 0.364417)
material_override = SubResource("StandardMaterial3D_rdi1l")
gi_lightmap_texel_scale = 0.01
use_collision = true
size = Vector3(3.28162, 1, 2.40338)

[node name="CSGCombiner3D2" type="CSGCombiner3D" parent="SubViewport"]
transform = Transform3D(15.3222, 0, 0, 0, 1, 0, 0, 0, 10.787, -37.2716, 6.8902, 0.364417)
material_override = SubResource("StandardMaterial3D_lvjdj")
use_collision = true

[node name="CSGBox3D2" type="CSGBox3D" parent="SubViewport/CSGCombiner3D2"]
transform = Transform3D(0.999999, 0, 0, 0, 0.999998, 0, 0, 0, 1, -4.51116, 0, 0)
material_override = SubResource("StandardMaterial3D_rdi1l")
use_collision = true
size = Vector3(9.18657, 14.7804, 2.40338)

[node name="CSGBox3D3" type="CSGBox3D" parent="SubViewport/CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.12364, 0, 0)
material_override = SubResource("StandardMaterial3D_rdi1l")
use_collision = true
size = Vector3(0.164248, 14.7804, 2.40338)

[node name="CSGBox3D4" type="CSGBox3D" parent="SubViewport/CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57144, 0, -1.36329)
material_override = SubResource("StandardMaterial3D_rdi1l")
use_collision = true
size = Vector3(3.26865, 14.7804, 0.450713)

[node name="CSGBox3D" type="CSGBox3D" parent="SubViewport/CSGCombiner3D2"]
transform = Transform3D(0.999999, 0, 0, 0, 0.999991, 0, 0, 0, 1, 0.00804138, -2.88477, 0.285583)
operation = 2
size = Vector3(0.199005, 6.76953, 0.428833)

[node name="CSGBox3D5" type="CSGBox3D" parent="SubViewport/CSGCombiner3D2"]
transform = Transform3D(0.999999, 0, 0, 0, 0.999988, 0, 0, 0, 1, 0.0632782, -1.03799, -0.50817)
operation = 2
size = Vector3(0.0885315, 3.5705, 0.428833)

[node name="CSGBox3D6" type="CSGBox3D" parent="SubViewport/CSGCombiner3D2"]
transform = Transform3D(0.999999, 0, 0, 0, 0.999984, 0, 0, 0, 1, -0.959407, 0.0882406, 0.0662042)
operation = 2
size = Vector3(1.97493, 11.6281, 1.30914)

[node name="cam_base" type="Marker3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -13.0007, 286.58, 280.967)
script = ExtResource("4_w7je5")
fov = 4.0

[node name="RayCast3D" type="RayCast3D" parent="SubViewport"]

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -13.0007, 286.58, 280.967)
fov = 4.0
size = 30.0

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.7167, 13.3033, -9.45531)
light_color = Color(0.993802, 0.590624, 0.360597, 1)
light_energy = 1.323
omni_range = 2549.53
omni_attenuation = -0.01

[node name="RigidBody3D" type="RigidBody3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.81762, 0.849736, -9.25651)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewport/RigidBody3D"]
shape = SubResource("BoxShape3D_1uwqr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport/RigidBody3D"]
mesh = SubResource("BoxMesh_lvjdj")

[node name="RigidBody3D2" type="RigidBody3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.81762, 0.849736, 8.43669)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewport/RigidBody3D2"]
shape = SubResource("BoxShape3D_1uwqr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport/RigidBody3D2"]
mesh = SubResource("BoxMesh_lvjdj")

[node name="RigidBody3D3" type="RigidBody3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.17189, 0.849736, 11.5284)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewport/RigidBody3D3"]
shape = SubResource("BoxShape3D_1uwqr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport/RigidBody3D3"]
mesh = SubResource("BoxMesh_lvjdj")

[node name="RigidBody3D4" type="RigidBody3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33.4721, 0.849736, -4.40068)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewport/RigidBody3D4"]
shape = SubResource("BoxShape3D_1uwqr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport/RigidBody3D4"]
mesh = SubResource("BoxMesh_lvjdj")

[node name="RigidBody3D5" type="RigidBody3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.70231, 0.849736, -9.26502)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewport/RigidBody3D5"]
shape = SubResource("BoxShape3D_1uwqr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport/RigidBody3D5"]
mesh = SubResource("BoxMesh_lvjdj")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="SubViewport"]
material_override = SubResource("StandardMaterial3D_txpwr")
use_collision = true

[node name="CSGBox3D2" type="CSGBox3D" parent="SubViewport/CSGCombiner3D"]
transform = Transform3D(15.3222, 0, 0, 0, 1, 0, 0, 0, 10.787, -18.5803, 0.693952, -4.09232)
material_override = SubResource("StandardMaterial3D_obyai")
use_collision = true
size = Vector3(1.20788, 1.24289, 0.187111)

[node name="CSGBox3D3" type="CSGBox3D" parent="SubViewport/CSGCombiner3D"]
transform = Transform3D(15.3222, 0, 0, 0, 1, 0, 0, 0, 10.787, -8.04438, 0.693952, -7.7698)
use_collision = true
size = Vector3(0.22714, 1.24289, 0.868946)

[node name="CSGBox3D4" type="CSGBox3D" parent="SubViewport/CSGCombiner3D"]
transform = Transform3D(15.3222, 0, 0, 0, 1, 0, 0, 0, 10.787, 6.40073, 0.693952, -4.68908)
material_override = SubResource("StandardMaterial3D_obyai")
use_collision = true
size = Vector3(0.454734, 1.24289, 0.297754)

[node name="CSGBox3D5" type="CSGBox3D" parent="SubViewport/CSGCombiner3D"]
transform = Transform3D(15.3222, 0, 0, 0, 1, 0, 0, 0, 10.787, 6.40073, 0.693952, 4.25052)
material_override = SubResource("StandardMaterial3D_obyai")
use_collision = true
size = Vector3(0.454734, 1.24289, 0.297754)

[node name="CSGBox3D6" type="CSGBox3D" parent="SubViewport/CSGCombiner3D"]
transform = Transform3D(15.3222, 0, 0, 0, 1, 0, 0, 0, 10.787, -23.3498, 0.693952, 11.5562)
material_override = SubResource("StandardMaterial3D_obyai")
use_collision = true
size = Vector3(0.221019, 1.24289, 0.612256)

[node name="CSGBox3D7" type="CSGBox3D" parent="SubViewport/CSGCombiner3D"]
transform = Transform3D(15.3222, 0, 0, 0, 1, 0, 0, 0, 10.787, -12.0651, 0.693952, 11.5562)
material_override = SubResource("StandardMaterial3D_obyai")
use_collision = true
size = Vector3(0.221019, 1.24289, 0.612256)

[node name="OmniLight3D2" type="SpotLight3D" parent="SubViewport"]
transform = Transform3D(0.103448, 0.457298, -0.883277, 0.0068179, 0.887694, 0.460383, 0.994612, -0.053648, 0.0887127, -67.3385, 12.704, -0.0727971)
light_color = Color(0.790125, 0.742766, 0.68079, 1)
light_indirect_energy = 2.0
light_specular = 0.015
shadow_enabled = true
shadow_bias = 1.0
distance_fade_begin = 743.35
distance_fade_shadow = 0.0
distance_fade_length = 11.1
spot_range = 73.7848
spot_attenuation = -1.0
spot_angle = 29.0573
spot_angle_attenuation = 0.0334928

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_e0a3d")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_txpwr")
expand_mode = 3
stretch_mode = 5
script = ExtResource("6_nyjhf")

[node name="DialogueBox" parent="." instance=ExtResource("7_eb6kk")]

[node name="Control" type="Control" parent="." node_paths=PackedStringArray("tmp", "camera", "raycast")]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_jmq0y")
tmp = NodePath("../SubViewport/Player")
camera = NodePath("../SubViewport/Camera3D")
raycast = NodePath("../SubViewport/RayCast3D")

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 920.0
offset_top = 52.0
offset_right = 1058.0
offset_bottom = 92.0
text = "base cam"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 920.0
offset_top = 112.0
offset_right = 1058.0
offset_bottom = 152.0
text = "base cam"

[node name="Barman" type="CharacterBody3D" parent="." node_paths=PackedStringArray("dialoguebox")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.2984, 1.50319, -5.93192)
collision_layer = 3
collision_mask = 3
script = ExtResource("9_btlhs")
dialoguebox = NodePath("../DialogueBox")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Barman"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.081543, 0, 0.991638)
shape = SubResource("BoxShape3D_1uwqr")

[node name="Mesh" type="MeshInstance3D" parent="Barman"]
mesh = SubResource("CapsuleMesh_obyai")
skeleton = NodePath("")

[node name="barman_speak_cam" type="Marker3D" parent="."]
transform = Transform3D(-4.36018e-08, 0.0707663, -0.997493, 3.09329e-09, 0.997493, 0.0707663, 1, 8.88178e-16, -4.37114e-08, -26.04, 2.11441, -4.1895)
script = ExtResource("4_w7je5")
fov = 45.0

[node name="CamCtrl" type="Node3D" parent="." node_paths=PackedStringArray("cam", "cam_base", "cam_bar")]
script = ExtResource("10_771cr")
cam = NodePath("../SubViewport/Camera3D")
cadre = 1
curve_fov = SubResource("Curve_jwave")
curve_pos = SubResource("Curve_pk40j")
curve_rot = SubResource("Curve_6xqm2")
duree = 2.0
cam_base = NodePath("../SubViewport/cam_base")
cam_bar = NodePath("../barman_speak_cam")

[node name="3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_qct44")
volume_db = -14.095
autoplay = true

[node name="RigidBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 13.4057)
shape = SubResource("WorldBoundaryShape3D_6xqm2")

[node name="Node" type="Node" parent="."]
script = ExtResource("12_3lyvf")
next_scene = "res://Menu_principal.tscn"

[node name="Timer" type="Timer" parent="Node"]
wait_time = 180.0

[connection signal="button_down" from="Control/Button" to="CamCtrl" method="go_base"]
[connection signal="button_down" from="Control/Button2" to="CamCtrl" method="go_bar"]
[connection signal="cam_in" from="Barman" to="CamCtrl" method="go_bar"]
[connection signal="cam_out" from="Barman" to="CamCtrl" method="go_base"]
[connection signal="timeout" from="Node/Timer" to="Node" method="_next_scene"]
